--- a/spotify_lyrics_app/index.html
+++ b/spotify_lyrics_app/index.html
@@ -1,6 +1,6 @@
 <html><head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <title>Spotify Web API - Display User Data</title>
+  <title></title>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta name="robots" content="noindex, nofollow">
   <meta name="googlebot" content="noindex, nofollow">
